--- a/index.html
+++ b/index.html
@@ -62,35 +62,35 @@
 				<div class="title">Список страниц:</div>
 
 				<div class="pages">
-					<a href="/main.html" class="page tooltip">
+					<a href="main.html" class="page tooltip">
 						Блог
 
 						<button type="button" class="copy" data-href-link="site2.projectslayout.website/main.html"></button>
 
 						<span class="tooltip_text">Ссылка скопирована</span>
 					</a>
-					<a href="/article.html" class="page tooltip">
+					<a href="article.html" class="page tooltip">
 						Статья
 
 						<button type="button" class="copy" data-href-link="site2.projectslayout.website/article.html"></button>
 
 						<span class="tooltip_text">Ссылка скопирована</span>
 					</a>
-					<a href="/creator.html" class="page tooltip">
+					<a href="creator.html" class="page tooltip">
 						Автор
 
 						<button type="button" class="copy" data-href-link="site2.projectslayout.website/creator.html"></button>
 
 						<span class="tooltip_text">Ссылка скопирована</span>
 					</a>
-					<a href="/creators.html" class="page tooltip">
+					<a href="creators.html" class="page tooltip">
 						Авторы
 
 						<button type="button" class="copy" data-href-link="site2.projectslayout.website/creators.html"></button>
 
 						<span class="tooltip_text">Ссылка скопирована</span>
 					</a>
-					<a href="/video.html" class="page tooltip">
+					<a href="video.html" class="page tooltip">
 						Видео
 
 						<button type="button" class="copy" data-href-link="site2.projectslayout.website/video.html"></button>
