--- a/article.html
+++ b/article.html
@@ -472,7 +472,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="page-pagination _flex"><a class="page-pagination__btn" href="/">Загрузить больше &amp</a></div>
+                    <div class="page-pagination _flex"><a class="page-pagination__btn" href="/">Загрузить больше</a></div>
                 </div>
             </section>
         </main>
