--- a/gift.html
+++ b/gift.html
@@ -97,39 +97,48 @@
             </script>
         </header>
         <main>
-            <section class="page-head">
-                <div class="center">
-                    <h1 class="page-head__title">Авторы</h1>
-                    <div class="page-head__subtitle">Пушкины, Достоевские, Тютчевы...</div>
+            <section class="gift">
+                <div class="center desktop">
+                    <div class="text">
+                        <h1>Подарочный <br>сертификат</h1><span>Порадуйте близких <br>сюрпризом с ог🔥ньком!</span><small>Просто, как 1,2,3!</small>
+                    </div>
+                    <div class="image"><img src="images/gift.png" alt=""></div>
+                    <div class="list">
+                        <div class="item"><span>Выберите мануал</span></div>
+                        <div class="item"><span>Укажите свою почту или отправьте <br>сертификат анонимно!</span></div>
+                        <div class="item"><span>Укажите данные получателя</span></div>
+                    </div>
+                    <button>Оформить сертификат</button>
+                </div>
+                <div class="center mobile">
+                    <div class="crumbs"><a href="index.html">Главная</a>
+                        <div class="divide"></div><span>Подарочный сертификат</span>
+                    </div>
+                    <h1>Подарочный сертификат</h1>
+                    <div class="image"><img src="images/gift.png" alt=""><span>Порадуйте близких сюрпризом с ог🔥ньком!</span></div>
+                    <div class="list">
+                        <div class="item"><span>Выберите мануал</span></div>
+                        <div class="item"><span>Укажите свою почту или отправьте <br>сертификат анонимно!</span></div>
+                        <div class="item"><span>Укажите данные получателя</span></div>
+                    </div><small>Просто, как 1,2,3!</small>
+                    <button>Оформить сертификат</button>
                 </div>
             </section>
-            <section class="creators">
+            <section class="what">
                 <div class="center">
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo.jpg" alt=""></div><span class="name">Сергей Митрофанов</span><span class="about">Бренд-менеджер, отвечает за развитие YouTube-канала. </span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a><a href="###"><img src="images/ic_soc2.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Сергея →</a>
+                    <div>
+                        <h3>На что действует сертификат?</h3><span>На все товары, представленные на нашем сайте. Сертификатом можно частично или полностью оплатить заказ, остаточная стоимость сработает как скидка на товар из выбранного раздела.</span>
                     </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_2.jpg" alt=""></div><span class="name">Анастасия Филиппова</span><span class="about">Бренд-менеджер, отвечает за контроль качества.</span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Анастасии →</a>
+                    <div>
+                        <h3>Как активировать сертификат?</h3><span>На почту получателя придет письмо с ссылкой для генерации индивидуального промокода, который необходимо ввести в корзине для активации сертификата.</span>
                     </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_3.jpg" alt=""></div><span class="name">Виолетта Ябловская</span><span class="about">Многократная победительница и призерка чемпионатов бариста. Сейчас живет в Португалии и занимается выбором кофе для ассортимента Сварщицы. </span>
-                        <div class="details"><span>29 статей 117 видео</span></div><a class="button" href="creator.html">Читать статьи Виолетты →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo.jpg" alt=""></div><span class="name">Сергей Митрофанов</span><span class="about">Бренд-менеджер, отвечает за развитие YouTube-канала. </span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a><a href="###"><img src="images/ic_soc2.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Сергея →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_2.jpg" alt=""></div><span class="name">Анастасия Филиппова</span><span class="about">Бренд-менеджер, отвечает за контроль качества.</span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Анастасии →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_3.jpg" alt=""></div><span class="name">Виолетта Ябловская</span><span class="about">Многократная победительница и призерка чемпионатов бариста. Сейчас живет в Португалии и занимается выбором кофе для ассортимента Сварщицы. </span>
-                        <div class="details"><span>29 статей 117 видео</span></div><a class="button" href="creator.html">Читать статьи Виолетты →</a>
+                    <div>
+                        <h3>Сколько действует сертификат?</h3><span>Срок действия наших сертификатов не ограничен. Сертификат можно использовать один раз.</span>
                     </div>
                 </div>
+            </section>
+            <section class="support">
+                <div class="center"><span>Если у вас возникли сложности с оформлением сертификата или другие вопросы - пожалуйста,пишите нам на почту: <a href="gastronom@theweldercatherine.ru">gastronom@theweldercatherine.ru</a>. Или звоните по телефону: <a href="tel:+7 (495) 640 12 25">+7 (495) 640 12 25</a> тогда наши менеджеры смогут оперативно помочь решить проблему!</span></div>
             </section>
         </main>
         <footer class="footer-navs-new">
