--- a/gift.order.html
+++ b/gift.order.html
@@ -97,38 +97,38 @@
             </script>
         </header>
         <main>
-            <section class="page-head">
+            <section class="gift_order">
                 <div class="center">
-                    <h1 class="page-head__title">Авторы</h1>
-                    <div class="page-head__subtitle">Пушкины, Достоевские, Тютчевы...</div>
-                </div>
-            </section>
-            <section class="creators">
-                <div class="center">
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo.jpg" alt=""></div><span class="name">Сергей Митрофанов</span><span class="about">Бренд-менеджер, отвечает за развитие YouTube-канала. </span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a><a href="###"><img src="images/ic_soc2.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Сергея →</a>
+                    <div class="crumbs"><a href="index.html">Главная</a>
+                        <div class="divide"></div><span>Подарочный сертификат</span>
                     </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_2.jpg" alt=""></div><span class="name">Анастасия Филиппова</span><span class="about">Бренд-менеджер, отвечает за контроль качества.</span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Анастасии →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_3.jpg" alt=""></div><span class="name">Виолетта Ябловская</span><span class="about">Многократная победительница и призерка чемпионатов бариста. Сейчас живет в Португалии и занимается выбором кофе для ассортимента Сварщицы. </span>
-                        <div class="details"><span>29 статей 117 видео</span></div><a class="button" href="creator.html">Читать статьи Виолетты →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo.jpg" alt=""></div><span class="name">Сергей Митрофанов</span><span class="about">Бренд-менеджер, отвечает за развитие YouTube-канала. </span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a><a href="###"><img src="images/ic_soc2.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Сергея →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_2.jpg" alt=""></div><span class="name">Анастасия Филиппова</span><span class="about">Бренд-менеджер, отвечает за контроль качества.</span>
-                        <div class="details"><span>29 статей 117 видео</span><a href="###"><img src="images/ic_soc1.png" alt=""></a></div><a class="button" href="creator.html">Читать статьи Анастасии →</a>
-                    </div>
-                    <div class="creator">
-                        <div class="photo"><img src="images/tmp/creator_photo_3.jpg" alt=""></div><span class="name">Виолетта Ябловская</span><span class="about">Многократная победительница и призерка чемпионатов бариста. Сейчас живет в Португалии и занимается выбором кофе для ассортимента Сварщицы. </span>
-                        <div class="details"><span>29 статей 117 видео</span></div><a class="button" href="creator.html">Читать статьи Виолетты →</a>
-                    </div>
+                    <h1>Приобрести сертификат</h1>
+                    <form>
+                        <div class="what"><span>Укажите номинал (минимальный 1000 рублей)</span>
+                            <div class="select">
+                                <select name="">
+                                    <option value="1000 руб" default>1000 руб</option>
+                                    <option value="2000 руб">2000 руб</option>
+                                    <option value="3000 руб">3000 руб</option>
+                                    <option value="4000 руб">4000 руб</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="from"><span>От кого</span>
+                            <input type="text" placeholder="ФИО">
+                            <input type="email" placeholder="e-mail">
+                            <input type="tel" placeholder="Телефон отправителя">
+                        </div>
+                        <label class="checkbox">
+                            <input type="checkbox" name="anonimus"><span>Отправить анонимно</span>
+                        </label>
+                        <div class="to"><span>Кому</span>
+                            <input type="tel" placeholder="Телефон отправителя">
+                            <input type="email" placeholder="e-mail">
+                        </div>
+                        <button class="yellow">Купить сертификат</button>
+                        <button class="border">Отменить</button>
+                    </form>
                 </div>
             </section>
         </main>
