--- a/article.html
+++ b/article.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/swiper-bundle.min.css">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/update_09.02.24.css">
+        <link rel="stylesheet" href="css/gift.css">
         <script defer src="js/jquery-3.5.0.min.js"></script>
         <script defer src="js/swiper-bundle.min.js"></script>
         <script defer src="js/scripts.js"></script>
